--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,56 @@
+aiohttp==3.9.1
+aiosignal==1.3.1
 annotated-types==0.6.0
 anyio==3.7.1
+async-timeout==4.0.3
 attrs==23.1.0
+Authlib==1.2.1
 certifi==2023.11.17
+cffi==1.16.0
+charset-normalizer==3.3.2
 click==8.1.7
+cryptography==41.0.7
+dataclasses-json==0.6.3
+docx2txt==0.8
 exceptiongroup==1.2.0
 fastapi==0.104.1
+frozenlist==1.4.0
 h11==0.14.0
-idna==3.5
+idna==3.6
+jsonpatch==1.33
+jsonpointer==2.4
+langchain==0.0.341
+langchain-core==0.0.6
+langsmith==0.0.67
+marshmallow==3.20.1
+multidict==6.0.4
+mypy-extensions==1.0.0
+numpy==1.26.2
 outcome==1.3.0.post0
+packaging==23.2
+pyaes==1.6.1
+pycparser==2.21
 pydantic==2.5.2
 pydantic_core==2.14.5
+pypdf==3.17.1
+Pyrogram==2.0.106
 PySocks==1.7.1
+PyYAML==6.0.1
+requests==2.31.0
 selenium==4.15.2
 sniffio==1.3.0
 sortedcontainers==2.4.0
+SQLAlchemy==2.0.23
 starlette==0.27.0
+tenacity==8.2.3
+TgCrypto==1.2.5
 trio==0.23.1
 trio-websocket==0.11.1
+typing-inspect==0.9.0
 typing_extensions==4.8.0
 urllib3==2.1.0
 uvicorn==0.24.0.post1
+validators==0.22.0
+weaviate-client==3.25.3
 wsproto==1.2.0
+yarl==1.9.3
