--- a/requirements.txt
+++ b/requirements.txt
@@ -5,26 +5,34 @@ anyio==3.7.1
 async-timeout==4.0.3
 attrs==23.1.0
 Authlib==1.2.1
+backoff==2.2.1
+beautifulsoup4==4.12.2
 certifi==2023.11.17
 cffi==1.16.0
+chardet==5.2.0
 charset-normalizer==3.3.2
 click==8.1.7
 cryptography==41.0.7
 dataclasses-json==0.6.3
-docx2txt==0.8
+emoji==2.9.0
 exceptiongroup==1.2.0
 fastapi==0.104.1
+filetype==1.2.0
 frozenlist==1.4.0
 h11==0.14.0
 idna==3.6
+joblib==1.3.2
 jsonpatch==1.33
 jsonpointer==2.4
-langchain==0.0.344
-langchain-core==0.0.8
-langsmith==0.0.67
+langchain==0.0.346
+langchain-core==0.0.10
+langdetect==1.0.9
+langsmith==0.0.69
+lxml==4.9.3
 marshmallow==3.20.1
 multidict==6.0.4
 mypy-extensions==1.0.0
+nltk==3.8.1
 numpy==1.26.2
 outcome==1.3.0.post0
 packaging==23.2
@@ -35,22 +43,32 @@ pydantic_core==2.14.5
 pypdf==3.17.1
 Pyrogram==2.0.106
 PySocks==1.7.1
+python-iso639==2023.6.15
+python-magic==0.4.27
 PyYAML==6.0.1
+rapidfuzz==3.5.2
+regex==2023.10.3
 requests==2.31.0
 selenium==4.15.2
+six==1.16.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
+soupsieve==2.5
 SQLAlchemy==2.0.23
 starlette==0.27.0
+tabulate==0.9.0
 tenacity==8.2.3
 TgCrypto==1.2.5
+tqdm==4.66.1
 trio==0.23.1
 trio-websocket==0.11.1
 typing-inspect==0.9.0
 typing_extensions==4.8.0
+unstructured==0.11.2
 urllib3==2.1.0
 uvicorn==0.24.0.post1
 validators==0.22.0
 weaviate-client==3.25.3
+wrapt==1.16.0
 wsproto==1.2.0
 yarl==1.9.3
