--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ charset-normalizer==3.3.2
 click==8.1.7
 cryptography==41.0.7
 dataclasses-json==0.6.3
+docx==0.2.4
 emoji==2.9.0
 exceptiongroup==1.2.0
 fastapi==0.104.1
@@ -24,8 +25,8 @@ idna==3.6
 joblib==1.3.2
 jsonpatch==1.33
 jsonpointer==2.4
-langchain==0.0.346
-langchain-core==0.0.10
+langchain==0.0.347
+langchain-core==0.0.11
 langdetect==1.0.9
 langsmith==0.0.69
 lxml==4.9.3
@@ -36,6 +37,7 @@ nltk==3.8.1
 numpy==1.26.2
 outcome==1.3.0.post0
 packaging==23.2
+Pillow==10.1.0
 pyaes==1.6.1
 pycparser==2.21
 pydantic==2.5.2
@@ -49,7 +51,7 @@ PyYAML==6.0.1
 rapidfuzz==3.5.2
 regex==2023.10.3
 requests==2.31.0
-selenium==4.15.2
+selenium==4.16.0
 six==1.16.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
@@ -71,4 +73,4 @@ validators==0.22.0
 weaviate-client==3.25.3
 wrapt==1.16.0
 wsproto==1.2.0
-yarl==1.9.3
+yarl==1.9.4
