--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,6 @@ charset-normalizer==3.3.2
 click==8.1.7
 cryptography==41.0.7
 dataclasses-json==0.6.3
-docx==0.2.4
 emoji==2.9.0
 exceptiongroup==1.2.0
 fastapi==0.104.1
@@ -33,6 +32,7 @@ lxml==4.9.3
 marshmallow==3.20.1
 multidict==6.0.4
 mypy-extensions==1.0.0
+networkx==3.2.1
 nltk==3.8.1
 numpy==1.26.2
 outcome==1.3.0.post0
@@ -42,11 +42,14 @@ pyaes==1.6.1
 pycparser==2.21
 pydantic==2.5.2
 pydantic_core==2.14.5
+pypandoc==1.12
 pypdf==3.17.1
 Pyrogram==2.0.106
 PySocks==1.7.1
+python-docx==1.1.0
 python-iso639==2023.6.15
 python-magic==0.4.27
+python-pptx==0.6.23
 PyYAML==6.0.1
 rapidfuzz==3.5.2
 regex==2023.10.3
@@ -73,4 +76,5 @@ validators==0.22.0
 weaviate-client==3.25.3
 wrapt==1.16.0
 wsproto==1.2.0
+XlsxWriter==3.1.9
 yarl==1.9.4
