--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ nltk==3.8.1
 numpy==1.26.2
 outcome==1.3.0.post0
 packaging==23.2
+pandas==2.1.3
 Pillow==10.1.0
 pyaes==1.6.1
 pycparser==2.21
@@ -46,10 +47,12 @@ pypandoc==1.12
 pypdf==3.17.1
 Pyrogram==2.0.106
 PySocks==1.7.1
+python-dateutil==2.8.2
 python-docx==1.1.0
 python-iso639==2023.6.15
 python-magic==0.4.27
 python-pptx==0.6.23
+pytz==2023.3.post1
 PyYAML==6.0.1
 rapidfuzz==3.5.2
 regex==2023.10.3
@@ -69,6 +72,7 @@ trio==0.23.1
 trio-websocket==0.11.1
 typing-inspect==0.9.0
 typing_extensions==4.8.0
+tzdata==2023.3
 unstructured==0.11.2
 urllib3==2.1.0
 uvicorn==0.24.0.post1
