--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ click==8.1.7
 cryptography==41.0.7
 dataclasses-json==0.6.3
 emoji==2.9.0
+et-xmlfile==1.1.0
 exceptiongroup==1.2.0
 fastapi==0.104.1
 filetype==1.2.0
@@ -35,6 +36,7 @@ mypy-extensions==1.0.0
 networkx==3.2.1
 nltk==3.8.1
 numpy==1.26.2
+openpyxl==3.1.2
 outcome==1.3.0.post0
 packaging==23.2
 pandas==2.1.3
