--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ annotated-types==0.6.0
 anyio==3.7.1
 async-timeout==4.0.3
 attrs==23.1.0
-Authlib==1.2.1
+Authlib==1.3.0
 backoff==2.2.1
 beautifulsoup4==4.12.2
 certifi==2023.11.17
@@ -17,7 +17,7 @@ dataclasses-json==0.6.3
 emoji==2.9.0
 et-xmlfile==1.1.0
 exceptiongroup==1.2.0
-fastapi==0.105.0
+fastapi==0.106.0
 filetype==1.2.0
 frozenlist==1.4.1
 h11==0.14.0
@@ -25,10 +25,10 @@ idna==3.6
 joblib==1.3.2
 jsonpatch==1.33
 jsonpointer==2.4
-langchain==0.0.350
-langchain-core==0.1.1
+langchain==0.0.352
+langchain-core==0.1.3
 langdetect==1.0.9
-langsmith==0.0.71
+langsmith==0.0.75
 lxml==4.9.3
 marshmallow==3.20.1
 multidict==6.0.4
@@ -43,10 +43,10 @@ pandas==2.1.4
 Pillow==10.1.0
 pyaes==1.6.1
 pycparser==2.21
-pydantic==2.5.2
-pydantic_core==2.14.5
+pydantic==2.5.3
+pydantic_core==2.14.6
 pypandoc==1.12
-pypdf==3.17.2
+pypdf==3.17.4
 Pyrogram==2.0.106
 PySocks==1.7.1
 python-dateutil==2.8.2
@@ -57,7 +57,7 @@ python-pptx==0.6.23
 pytz==2023.3.post1
 PyYAML==6.0.1
 rapidfuzz==3.5.2
-regex==2023.10.3
+regex==2023.12.25
 requests==2.31.0
 selenium==4.16.0
 six==1.16.0
@@ -75,11 +75,11 @@ trio-websocket==0.11.1
 typing-inspect==0.9.0
 typing_extensions==4.9.0
 tzdata==2023.3
-unstructured==0.11.4
+unstructured==0.11.6
 urllib3==2.1.0
-uvicorn==0.24.0.post1
+uvicorn==0.25.0
 validators==0.22.0
-weaviate-client==3.25.3
+weaviate-client==3.26.0
 wrapt==1.16.0
 wsproto==1.2.0
 XlsxWriter==3.1.9
