--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-aiohttp==3.9.1
+aiohttp==3.9.2
 aiosignal==1.3.1
 annotated-types==0.6.0
 anyio==3.7.1
@@ -6,18 +6,18 @@ async-timeout==4.0.3
 attrs==23.2.0
 Authlib==1.3.0
 backoff==2.2.1
-beautifulsoup4==4.12.2
+beautifulsoup4==4.12.3
 certifi==2023.11.17
 cffi==1.16.0
 chardet==5.2.0
 charset-normalizer==3.3.2
 click==8.1.7
-cryptography==41.0.7
+cryptography==42.0.1
 dataclasses-json==0.6.3
-emoji==2.9.0
+emoji==2.10.0
 et-xmlfile==1.1.0
 exceptiongroup==1.2.0
-fastapi==0.108.0
+fastapi==0.109.0
 filetype==1.2.0
 frozenlist==1.4.1
 h11==0.14.0
@@ -26,13 +26,13 @@ joblib==1.3.2
 jsonpatch==1.33
 jsonpath-python==1.0.6
 jsonpointer==2.4
-langchain==0.1.0
-langchain-community==0.0.10
-langchain-core==0.1.8
+langchain==0.1.4
+langchain-community==0.0.16
+langchain-core==0.1.16
 langdetect==1.0.9
-langsmith==0.0.78
+langsmith==0.0.84
 lxml==5.1.0
-marshmallow==3.20.1
+marshmallow==3.20.2
 multidict==6.0.4
 mypy-extensions==1.0.0
 networkx==3.2.1
@@ -41,14 +41,14 @@ numpy==1.26.3
 openpyxl==3.1.2
 outcome==1.3.0.post0
 packaging==23.2
-pandas==2.1.4
+pandas==2.2.0
 pillow==10.2.0
 pyaes==1.6.1
 pycparser==2.21
-pydantic==2.5.3
-pydantic_core==2.14.6
+pydantic==2.6.0
+pydantic_core==2.16.1
 pypandoc==1.12
-pypdf==3.17.4
+pypdf==4.0.1
 Pyrogram==2.0.106
 PySocks==1.7.1
 python-dateutil==2.8.2
@@ -56,12 +56,12 @@ python-docx==1.1.0
 python-iso639==2024.1.2
 python-magic==0.4.27
 python-pptx==0.6.23
-pytz==2023.3.post1
+pytz==2023.4
 PyYAML==6.0.1
 rapidfuzz==3.6.1
 regex==2023.12.25
 requests==2.31.0
-selenium==4.16.0
+selenium==4.17.2
 six==1.16.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
@@ -72,17 +72,17 @@ tabulate==0.9.0
 tenacity==8.2.3
 TgCrypto==1.2.5
 tqdm==4.66.1
-trio==0.23.2
+trio==0.24.0
 trio-websocket==0.11.1
 typing-inspect==0.9.0
 typing_extensions==4.9.0
 tzdata==2023.4
-unstructured==0.11.8
-unstructured-client==0.15.2
+unstructured==0.12.3
+unstructured-client==0.16.0
 urllib3==2.1.0
-uvicorn==0.25.0
+uvicorn==0.27.0.post1
 validators==0.22.0
-weaviate-client==3.26.0
+weaviate-client==3.26.2
 wrapt==1.16.0
 wsproto==1.2.0
 XlsxWriter==3.1.9
