--- a/requirements.txt
+++ b/requirements.txt
@@ -12,12 +12,12 @@ cffi==1.16.0
 chardet==5.2.0
 charset-normalizer==3.3.2
 click==8.1.7
-cryptography==42.0.2
+cryptography==42.0.5
 dataclasses-json==0.6.4
 emoji==2.10.1
 et-xmlfile==1.1.0
 exceptiongroup==1.2.0
-fastapi==0.109.2
+fastapi==0.110.0
 filetype==1.2.0
 frozenlist==1.4.1
 h11==0.14.0
@@ -26,11 +26,11 @@ joblib==1.3.2
 jsonpatch==1.33
 jsonpath-python==1.0.6
 jsonpointer==2.4
-langchain==0.1.6
-langchain-community==0.0.19
-langchain-core==0.1.22
+langchain==0.1.9
+langchain-community==0.0.24
+langchain-core==0.1.26
 langdetect==1.0.9
-langsmith==0.0.87
+langsmith==0.1.8
 lxml==5.1.0
 marshmallow==3.20.2
 multidict==6.0.5
@@ -41,14 +41,14 @@ numpy==1.26.4
 openpyxl==3.1.2
 outcome==1.3.0.post0
 packaging==23.2
-pandas==2.2.0
+pandas==2.2.1
 pillow==10.2.0
 pyaes==1.6.1
 pycparser==2.21
-pydantic==2.6.1
-pydantic_core==2.16.2
-pypandoc==1.12
-pypdf==4.0.1
+pydantic==2.6.2
+pydantic_core==2.16.3
+pypandoc==1.13
+pypdf==4.0.2
 Pyrogram==2.0.106
 PySocks==1.7.1
 python-dateutil==2.8.2
@@ -61,29 +61,29 @@ PyYAML==6.0.1
 rapidfuzz==3.6.1
 regex==2023.12.25
 requests==2.31.0
-selenium==4.17.2
+selenium==4.18.1
 six==1.16.0
-sniffio==1.3.0
+sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.5
-SQLAlchemy==2.0.25
+SQLAlchemy==2.0.27
 starlette==0.36.3
 tabulate==0.9.0
 tenacity==8.2.3
 TgCrypto==1.2.5
-tqdm==4.66.1
+tqdm==4.66.2
 trio==0.24.0
 trio-websocket==0.11.1
 typing-inspect==0.9.0
-typing_extensions==4.9.0
-tzdata==2023.4
+typing_extensions==4.10.0
+tzdata==2024.1
 unstructured==0.12.4
 unstructured-client==0.18.0
-urllib3==2.2.0
-uvicorn==0.27.0.post1
+urllib3==2.2.1
+uvicorn==0.27.1
 validators==0.22.0
 weaviate-client==4.4.4
 wrapt==1.16.0
 wsproto==1.2.0
-XlsxWriter==3.1.9
+XlsxWriter==3.2.0
 yarl==1.9.4
