--- a/requirements.txt
+++ b/requirements.txt
@@ -26,13 +26,13 @@ joblib==1.3.2
 jsonpatch==1.33
 jsonpath-python==1.0.6
 jsonpointer==2.4
-langchain==0.1.9
-langchain-community==0.0.24
-langchain-core==0.1.26
+langchain==0.1.12
+langchain-community==0.0.28
+langchain-core==0.1.31
 langdetect==1.0.9
-langsmith==0.1.8
+langsmith==0.1.25
 lxml==5.1.0
-marshmallow==3.20.2
+marshmallow==3.21.1
 multidict==6.0.5
 mypy-extensions==1.0.0
 networkx==3.2.1
@@ -40,25 +40,25 @@ nltk==3.8.1
 numpy==1.26.4
 openpyxl==3.1.2
 outcome==1.3.0.post0
-packaging==23.2
+packaging==24.0
 pandas==2.2.1
 pillow==10.2.0
 pyaes==1.6.1
 pycparser==2.21
-pydantic==2.6.2
+pydantic==2.6.4
 pydantic_core==2.16.3
 pypandoc==1.13
-pypdf==4.0.2
+pypdf==4.1.0
 Pyrogram==2.0.106
 PySocks==1.7.1
-python-dateutil==2.8.2
+python-dateutil==2.9.0.post0
 python-docx==1.1.0
 python-iso639==2024.2.7
 python-magic==0.4.27
 python-pptx==0.6.23
 pytz==2024.1
 PyYAML==6.0.1
-rapidfuzz==3.6.1
+rapidfuzz==3.6.2
 regex==2023.12.25
 requests==2.31.0
 selenium==4.18.1
@@ -66,7 +66,7 @@ six==1.16.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.5
-SQLAlchemy==2.0.27
+SQLAlchemy==2.0.28
 starlette==0.36.3
 tabulate==0.9.0
 tenacity==8.2.3
@@ -75,14 +75,14 @@ tqdm==4.66.2
 trio==0.24.0
 trio-websocket==0.11.1
 typing-inspect==0.9.0
-typing_extensions==4.10.0
+typing_extensions==4.9.0
 tzdata==2024.1
-unstructured==0.12.4
-unstructured-client==0.18.0
-urllib3==2.2.1
-uvicorn==0.27.1
+unstructured==0.12.6
+unstructured-client==0.22.0
+urllib3==1.26.18
+uvicorn==0.28.0
 validators==0.22.0
-weaviate-client==4.4.4
+weaviate-client==4.5.2
 wrapt==1.16.0
 wsproto==1.2.0
 XlsxWriter==3.2.0
