--- a/requirements.txt
+++ b/requirements.txt
@@ -51,7 +51,7 @@ pypandoc==1.13
 pypdf==4.1.0
 Pyrogram==2.0.106
 PySocks==1.7.1
-python-dateutil==2.9.0.post0
+python-dateutil==2.8.2
 python-docx==1.1.0
 python-iso639==2024.2.7
 python-magic==0.4.27
