--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ attrs==23.2.0
 Authlib==1.3.0
 backoff==2.2.1
 beautifulsoup4==4.12.3
+build==1.1.1
 certifi==2024.2.2
 cffi==1.16.0
 chardet==5.2.0
@@ -14,13 +15,20 @@ charset-normalizer==3.3.2
 click==8.1.7
 cryptography==42.0.5
 dataclasses-json==0.6.4
+dataclasses-json-speakeasy==0.5.11
+deepdiff==6.7.1
 emoji==2.10.1
 et-xmlfile==1.1.0
 exceptiongroup==1.2.0
 fastapi==0.110.0
 filetype==1.2.0
 frozenlist==1.4.1
+grpcio==1.60.1
+grpcio-health-checking==1.60.1
+grpcio-tools==1.60.1
 h11==0.14.0
+httpcore==1.0.2
+httpx==0.27.0
 idna==3.6
 joblib==1.3.2
 jsonpatch==1.33
@@ -29,6 +37,7 @@ jsonpointer==2.4
 langchain==0.1.12
 langchain-community==0.0.28
 langchain-core==0.1.31
+langchain-text-splitters==0.0.1
 langdetect==1.0.9
 langsmith==0.1.25
 lxml==5.1.0
@@ -39,16 +48,22 @@ networkx==3.2.1
 nltk==3.8.1
 numpy==1.26.4
 openpyxl==3.1.2
+ordered-set==4.1.0
+orjson==3.9.15
 outcome==1.3.0.post0
 packaging==23.2
 pandas==2.2.1
 pillow==10.2.0
+pip-tools==7.4.1
+protobuf==4.25.2
 pyaes==1.6.1
 pycparser==2.21
 pydantic==2.6.4
 pydantic_core==2.16.3
+pylatexenc==2.10
 pypandoc==1.13
 pypdf==4.1.0
+pyproject_hooks==1.0.0
 Pyrogram==2.0.106
 PySocks==1.7.1
 python-dateutil==2.8.2
@@ -71,6 +86,7 @@ starlette==0.36.3
 tabulate==0.9.0
 tenacity==8.2.3
 TgCrypto==1.2.5
+tomli==2.0.1
 tqdm==4.66.2
 trio==0.24.0
 trio-websocket==0.11.1
